<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".History">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnHistory"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@color/colorGrey"
        android:text="@string/txt"
        android:textColor="@color/colorLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@color/colorGrey"
        android:text="@string/txtTests"
        android:textColor="@color/colorLight"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="372dp" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CAtegory:"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="151dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CAtegory:"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="317dp" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Charges"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="231dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:text="Date"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="112dp" />

    <TextView
        android:id="@+id/textViewDate4"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:text="Date"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="428dp" />

    <TextView
        android:id="@+id/textViewDate7"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:text="Date"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="598dp" />

    <TextView
        android:id="@+id/textViewDate5"
        android:layout_width="93dp"
        android:layout_height="20dp"
        android:text="Test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="487dp" />

    <TextView
        android:id="@+id/textViewDate6"
        android:layout_width="93dp"
        android:layout_height="20dp"
        android:text="Price"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="529dp" />

    <TextView
        android:id="@+id/textViewDate2"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:text="Date"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="269dp" />

    <TextView
        android:id="@+id/textViewDate3"
        android:layout_width="211dp"
        android:layout_height="25dp"
        android:text="Category"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="311dp" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="202dp"
        android:layout_height="22dp"
        android:text="Category"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="151dp" />

    <TextView
        android:id="@+id/textViewDoctorName"
        android:layout_width="202dp"
        android:layout_height="22dp"
        android:text="Doctor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="187dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Doctor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="190dp" />

    <TextView
        android:id="@+id/textViewDoctorName2"
        android:layout_width="202dp"
        android:layout_height="22dp"
        android:text="Price"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="529dp" />

    <TextView
        android:id="@+id/textViewCharges"
        android:layout_width="202dp"
        android:layout_height="22dp"
        android:text="Charge"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="228dp" />

    <TextView
        android:id="@+id/textViewCharges2"
        android:layout_width="202dp"
        android:layout_height="22dp"
        android:text="Test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="487dp" />


    <!-- Question 02 (f) -->

</androidx.constraintlayout.widget.ConstraintLayout>